--- a/复习/16.图书管理案例/style.css
+++ b/复习/16.图书管理案例/style.css
@@ -1,7 +1,7 @@
 table {
   border: 1px solid #e9e9e9;
   border-collapse: collapse;
-  border-spacing: 0;
+  border-spacing: 0 !important; 
 }
 th,
 td {
